fix: remove ref to bevy in the presentation

--- a/slides/templates/async_rust_tui.html
+++ b/slides/templates/async_rust_tui.html
@@ -210,7 +210,7 @@
           <div class="lots_of_items4">
             <ul>
               <li>
-                Save time by doing the bevy setup if not already done or as an
+                Save time by doing the setup if not already done or as an
                 alternative use
                 <a href="https://github.com/codespaces"
                   >https://github.com/codespaces</a
