feat: Add a point to retrieve the SNCF API key

--- a/slides/templates/async_rust_tui.html
+++ b/slides/templates/async_rust_tui.html
@@ -206,7 +206,7 @@
 
         <section>
           <h3>Async Rust and TUI</h3>
-          <h3>Welcome and Development Environment Setup</h3>
+          <h4>Welcome and Development Environment Setup</h4>
           <div class="lots_of_items4">
             <ul>
               <li>
@@ -231,6 +231,24 @@
                   <a href="https://github.com/uggla/async_rust_tui"
                     >https://github.com/uggla/async_rust_tui</a
                   >
+                </li>
+                <li>
+                  Get your personal SNCF API key
+                  <a
+                    href="https://numerique.sncf.com/startup/api/token-developpeur/"
+                    >https://numerique.sncf.com/startup/api/token-developpeur/</a
+                  >
+                  <ul>
+                    <li>
+                      If you don’t want to create a personal API key for the
+                      workshop, you can download a pre-generated one instead
+                      (<em>workshop use only</em>).
+                    </li>
+                    <li>
+                      Download link:
+                      <code>TODO_URL_TO_SHARED_API_KEY</code>
+                    </li>
+                  </ul>
                 </li>
               </ol>
               <li>Then we will do the introduction.</li>
