fix: fix alt in the part 4

--- a/slides/templates/async_rust_tui.html
+++ b/slides/templates/async_rust_tui.html
@@ -1254,11 +1254,7 @@ let json = serde_json::to_string(&place)?;
         <!-- ======================== -->
         <section>
           <h3>Part 4 - Config and TUI</h3>
-          <img
-            src="images/part04.jpg"
-            alt="Api wrapping and dependency inversion"
-            width="80%"
-          />
+          <img src="images/part04.jpg" alt="Config and TUI" width="80%" />
         </section>
 
         <section>
